0.15.1
	bugfix: fix auth headers in upgrade script (broken in 0.15.0)
0.15.0 2008-05-10
	new feature: tags
	new feature: automatic option groups
	new feature: rendered links in dictionary view
	new feature: trunk support in switchvlans gateway
	new feature: Tango icon set
	update: added Force10, NETGEAR, D-Link, 3Com  and Extreme Networks
		switches, Raisecom MUXes, updated Cisco routers
	update: async port type has been split
	update: don't allow duplicate rack names in one row
	update: internal help system has been dropped
	update: SSV format for RS import
	bugfix: handle "routed" switch ports
	bugfix: make switchvlans gateway work on Linux
0.14.12 2008-02-29
	new feature: default value for RS inservice status
	new feature: AutoPorts feature
	new feature: HTTP installer
	new feature: default object type
	new feature: UTF-8 support
	bugfix: router HW type list was broken
	update: added Aten KVM switches and consoles
	update: added Tainet MUXes
	update: updated HP servers
0.14.11 2008-02-15
	bugfix: rackspace allocation was broken by magic_quotes fix
	bugfix: don't generate error messages by accessing _GET array
	bugfix: thumbs cache wasn't updated in rare cases
	bugfix: LivePTR: fixed warnings, tabindex, name reset and color markup
	update: KVM port type has been split (see wiki page)
	update: Avocent KVM switches, RAD and Cronyx multiplexers
0.14.10 2008-02-01
	bugfix: avoid hitting GET limit on object and rack update
	bugfix: sticker reset icon did not work sometimes
	bugfix: don't fail rendering an empty rack row
	bugfix: rack operations were broken in 0.14.9
	bugfix: upgrade script didn't authenticate users properly
	new feature: LDAP authentication
	new feature: borrow URL detection from Mantis BTS (suggested by Joakim Kasimir)
	new feature: Live PTR tab for DNS sync
	new feature: rack population threshold for rackspace allocation
0.14.9 2008-01-30
	bugfix: upgrade to 0.14.8 broke IPv4 prefix creation
	bugfix: more DB cleanups